# rust-glancer

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  deny.toml
crates/engine/analysis/: Cargo.toml
crates/engine/analysis/src/: completion.rs  completion_site.rs  cursor.rs  entity.rs  hints.rs  hover.rs  lib.rs  model.rs  navigation.rs  path_render.rs  signature.rs  source_symbol.rs  symbol.rs  symbols.rs  txn.rs  ty.rs  type_render.rs
crates/engine/analysis/src/api/: completion_site.rs  mod.rs  source_symbol.rs
crates/engine/analysis/src/model/: completion.rs  hover.rs  inlay_hints.rs  mod.rs  navigation.rs  references.rs  rename.rs  symbol.rs  symbols.rs  type_hints.rs
crates/engine/analysis/src/query/: declaration_details.rs  hover.rs  inlay_hints.rs  member.rs  mod.rs  references.rs  rename.rs  type_hints.rs
crates/engine/analysis/src/source_symbol/: adapter.rs  index.rs  mod.rs  resolver.rs
crates/engine/analysis/src/tests/: completions_at.rs  completions_at_dot.rs  document_symbols.rs  goto_definition.rs  goto_implementation.rs  goto_type_definition.rs  hover.rs  inference.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  resolve_symbol.rs  symbol_at.rs  type_at.rs  type_hints.rs  utils.rs  workspace_symbols.rs
crates/engine/body-ir/: Cargo.toml
crates/engine/body-ir/src/: body.rs  expr.rs  ids.rs  item.rs  lib.rs  pat.rs  path.rs  resolved.rs  stmt.rs  testonly.rs  ty.rs  view.rs
crates/engine/body-ir/src/cache/: mod.rs
crates/engine/body-ir/src/cursor/: mod.rs  scan.rs
crates/engine/body-ir/src/ir/: body.rs  body_map.rs  expr.rs  ids.rs  item.rs  mod.rs  (+7 more)
crates/engine/cfg-eval/: Cargo.toml
crates/engine/cfg-eval/src/: lib.rs
crates/engine/def-map/: Cargo.toml
crates/engine/def-map/src/: collect.rs  cursor.rs  data.rs  db.rs  def_map.rs  ids.rs  import.rs  lib.rs  memsize.rs  path.rs  path_resolution.rs  profile.rs  scope.rs  testonly.rs  txn.rs
crates/engine/ir-model/: Cargo.toml
crates/engine/ir-model/src/: body.rs  def_map.rs  lib.rs  mutability.rs  path.rs  resolution.rs  semantic.rs
crates/engine/ir-storage/: Cargo.toml
crates/engine/ir-storage/src/: body.rs  lib.rs
crates/engine/ir-view/: Cargo.toml
crates/engine/ir-view/src/: body.rs  db.rs  declaration.rs  details.rs  implementation.rs  item_index.rs  kind.rs  lib.rs  member.rs  module.rs  name_lookup.rs  path.rs  reference.rs  resolution.rs  signature.rs  source.rs  symbol.rs  testonly.rs  tests.rs  ty.rs  ty_label.rs
crates/engine/item-tree/: Cargo.toml
crates/engine/item-tree/src/: db.rs  lib.rs  lower.rs  memsize.rs  package.rs  testonly.rs
crates/engine/macro-runtime/: Cargo.toml
crates/engine/macro-runtime/src/: cache.rs  executor.rs  lib.rs  runtime.rs  syntax.rs
crates/engine/package-store/: Cargo.toml
crates/engine/package-store/src/: error.rs  lib.rs  loader.rs  txn.rs
crates/engine/parse/: Cargo.toml
crates/engine/parse/src/: db.rs  file.rs  fs.rs  lib.rs  line_index.rs  memsize.rs  module.rs  package.rs  span.rs  target.rs
crates/engine/parser/: Cargo.toml  README.md
crates/engine/parser/src/: event.rs  grammar.rs  input.rs  lexed_str.rs  parser.rs  token_set.rs
crates/engine/semantic-ir/: Cargo.toml
crates/engine/semantic-ir/src/: autoderef.rs  cursor.rs  deref.rs  ids.rs  impl_match.rs  item_query.rs  item_store.rs  item_store_lowering.rs  items.rs  lib.rs  memsize.rs  package.rs  path_query.rs  resolution.rs  signature.rs  stats.rs  target.rs  testonly.rs  txn.rs  type_conversion.rs  view.rs
crates/engine/syntax/: Cargo.toml  README.md
crates/engine/syntax/src/: algo.rs  ast.rs  fuzz.rs  hacks.rs  lib.rs  ptr.rs  syntax_editor.rs  syntax_node.rs  tests.rs  utils.rs  validation.rs
crates/engine/ty/: Cargo.toml
crates/engine/ty/src/: associated_type.rs  autoderef.rs  call_arg.rs  deref.rs  generic_arg.rs  impl_match.rs  implementation.rs  indexed.rs  item_path.rs  iteration.rs  lib.rs  member.rs  primitive.rs  primitive_expr.rs  ty.rs
crates/engine/workspace/: Cargo.toml
crates/engine/workspace/src/: cargo.rs  lib.rs  lower.rs  memsize.rs  path.rs  rustc.rs  sysroot.rs
crates/lib/memsize/: Cargo.toml
crates/lib/memsize-derive/: Cargo.toml
crates/lib/memsize-derive/src/: attrs.rs  expand.rs  generics.rs  lib.rs
crates/lib/memsize/src/: default_impls.rs  lib.rs  rg_syntax_impls.rs
crates/lib/rowan/: Cargo.toml  README.md
crates/lib/rowan/examples/: math.rs  s_expressions.rs
crates/lib/rowan/src/: api.rs  ast.rs  cursor.rs  green.rs  lib.rs  profiling.rs  serde_impls.rs  syntax_text.rs  utility_types.rs
crates/lib/std/: Cargo.toml
crates/lib/std/src/: expected_unique.rs  lib.rs  shrink.rs  unique.rs
crates/lib/text/: Cargo.toml
crates/lib/text/src/: lib.rs
crates/lib/wincode-utils/: Cargo.toml
crates/lib/wincode-utils/src/: lib.rs
crates/lsp-server/: Cargo.toml
crates/lsp-server/src/: backend.rs  config.rs  lib.rs
crates/lsp-server/src/methods/: mod.rs
crates/lsp/engine/: Cargo.toml
crates/lsp/engine/src/: debounce.rs  formatting.rs  lib.rs  project_stats.rs  rpc.rs
crates/lsp/proto/: Cargo.toml
crates/lsp/proto/src/: analysis_config.rs  client_capabilities.rs  completion.rs  diagnostics_config.rs  engine_config.rs  error.rs  lib.rs  notifications.rs  service.rs
crates/lsp/server/: Cargo.toml
crates/lsp/server/src/: backend.rs  capabilities.rs  client_notifications.rs  commands.rs  config.rs  engine_client.rs  engine_process.rs  engine_registry.rs  file_identity.rs  lib.rs  notifications.rs  project_watcher.rs  recent_editor_saves.rs  run.rs  stdio.rs
crates/rust-glancer/: Cargo.toml
crates/rust-glancer/benches/: ci_analyze.rs
crates/rust-glancer/src/: logging.rs  main.rs  memory.rs  runtime.rs  start_engine.rs  start_server.rs
crates/rust-glancer/src/analyze/: config.rs  fmt.rs  mod.rs  output.rs  profile.rs
crates/rust-glancer/src/compare_lsp/: config.rs  execution.rs  mod.rs  normalization.rs  output.rs
crates/test-fixture/: Cargo.toml
crates/tools/codegen/: Cargo.toml  README.md  rustfmt.codegen.toml
crates/tools/codegen/src/: codegen.rs  main.rs  util.rs
(+808 files in other folders)
