[workspace]
members = [
  "crates/rust-glancer",
  "crates/lsp/server",
  "crates/lsp/proto",
  "crates/lsp/engine",
  "crates/engine/workspace",
  "crates/engine/parse",
  "crates/engine/item-tree",
  "crates/engine/def-map",
  "crates/engine/semantic-ir",
  "crates/engine/body-ir",
  "crates/engine/analysis",
  "crates/engine/project",
  "crates/engine/package-store",
  "crates/lib/text",
  "crates/lib/arena",
  "crates/lib/memsize",
  "crates/lib/test-fixture",
]
exclude = [
  "test_targets/simple_crate",
  "test_targets/moderate_crate",
  "test_targets/complex_crate",
  "test_targets/moderate_workspace",
  "test_targets/complex_workspace",
  "test_targets/bench_fixtures/small_app",
  "test_targets/bench_fixtures/synthetic_parse_heavy",
  "test_targets/bench_fixtures/synthetic_item_tree_heavy",
  "test_targets/bench_fixtures/synthetic_def_map_heavy",
  "test_targets/bench_fixtures/synthetic_body_heavy",
  "test_targets/bench_fixtures/rust-analyzer",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/popzxc/rust-glancer"
homepage = "https://github.com/popzxc/rust-glancer"
readme = "README.md"
description = "A Rust workspace for rust-glancer."

[workspace.dependencies]
anyhow = "1.0.102"
atomic-write-file = "0.3.0"
blake3 = "1.8.2"
clap = "4.5.50"
cargo_metadata = "0.23"
derive_more = { version = "2.1.1" }
divan = "0.1.21"
expect-test = "1.5.1"
futures = "0.3"
ls_types = { package = "ls-types", version = "0.0.6" }
wincode = { version = "0.4.9", features = ["derive"] }
rayon = "1.12.0"
serde = "1.0"
tarpc = "0.37"
tempfile = "3.27.0"
thiserror = "2.0.17"
tokio = "1.48"
tower-lsp-server = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-sys = "0.6.1"

ra_syntax = { package = "syntax", git = "https://github.com/rust-lang/rust-analyzer", rev = "b8458013c217be4fccefc4e4f194026fa04ab4ca"}

rg_lsp_server = { path = "crates/lsp/server" }
rg_lsp_proto = { path = "crates/lsp/proto" }
rg_lsp_engine = { path = "crates/lsp/engine" }
rg_workspace = { path = "crates/engine/workspace" }
rg_parse = { path = "crates/engine/parse" }
rg_item_tree = { path = "crates/engine/item-tree" }
rg_def_map = { path = "crates/engine/def-map" }
rg_semantic_ir = { path = "crates/engine/semantic-ir" }
rg_body_ir = { path = "crates/engine/body-ir" }
rg_analysis = { path = "crates/engine/analysis" }
rg_project = { path = "crates/engine/project" }
rg_package_store = { path = "crates/engine/package-store" }
rg_text = { path = "crates/lib/text" }
rg_arena = { path = "crates/lib/arena" }
rg_memsize = { path = "crates/lib/memsize" }
test_fixture = { path = "crates/lib/test-fixture" }
