[workspace]
members = [
  "crates/rust-glancer",
  "crates/lsp/server",
  "crates/lsp/proto",
  "crates/lsp/engine",
  "crates/engine/workspace",
  "crates/vendor/parser",
  "crates/vendor/syntax",
  "crates/vendor/tt",
  "crates/engine/cfg-eval",
  "crates/vendor/macro-expand",
  "crates/engine/parse",
  "crates/engine/item-tree",
  "crates/engine/ir-model",
  "crates/engine/ir-storage",
  "crates/engine/ir-view",
  "crates/engine/def-map",
  "crates/engine/semantic-ir",
  "crates/engine/ty",
  "crates/engine/body-ir",
  "crates/engine/analysis",
  "crates/engine/project",
  "crates/engine/package-store",
  "crates/lib/text",
  "crates/lib/arena",
  "crates/lib/profile",
  "crates/lib/std",
  "crates/lib/std-derive",
  "crates/lib/wincode-utils",
  "crates/lib/test-fixture",
  "crates/tools/codegen",
]
exclude = [
  "test_targets/simple_crate",
  "test_targets/moderate_crate",
  "test_targets/complex_crate",
  "test_targets/moderate_workspace",
  "test_targets/complex_workspace",
  "test_targets/bench_fixtures/small_app",
  "test_targets/bench_fixtures/synthetic_parse_heavy",
  "test_targets/bench_fixtures/synthetic_item_tree_heavy",
  "test_targets/bench_fixtures/synthetic_def_map_heavy",
  "test_targets/bench_fixtures/synthetic_body_heavy",
  "test_targets/bench_fixtures/rust-analyzer",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/popzxc/rust-glancer"
homepage = "https://github.com/popzxc/rust-glancer"
readme = "README.md"
description = "A Rust workspace for rust-glancer."

[workspace.dependencies]
anyhow = "1.0.102"
atomic-write-file = "0.3.0"
blake3 = "1.8.5"
bumpalo = "3.17.0"
clap = "4.6.1"
cargo_metadata = "0.23.1"
derive_more = { version = "2.1.1" }
divan = { package = "codspeed-divan-compat", version = "4.6.0" }
drop_bomb = "0.1.5"
either = "1.15.0"
expect-test = "1.5.1"
futures = "0.3.32"
gungraun = "0.18.2"
itertools = "0.14.0"
ls_types = { package = "ls-types", version = "0.0.6" }
parser = { package = "rg_parser", path = "crates/vendor/parser" }
proc-macro2 = "1.0.106"
quote = "1.0.45"
ra-ap-rustc_lexer = "0.160"
wincode = { version = "0.5.3", features = ["derive"] }
rayon = "1.12.0"
rustc-hash = "2.1.2"
rustc-literal-escaper = "0.0.4"
rustc_apfloat = "0.2.3"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
smol_str = "0.3.2"
syn = "2.0"
tarpc = "0.37"
tempfile = "3.27.0"
text-size = "1.1.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tower-lsp-server = "0.23"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-sys = "0.6.1"
ungrammar = "1.16.1"
winnow = "0.7.13"

# For vendored rust-analyzer crates
stdx = { git = "https://github.com/rust-lang/rust-analyzer", rev = "b8458013c217be4fccefc4e4f194026fa04ab4ca" }
edition = { git = "https://github.com/rust-lang/rust-analyzer", rev = "b8458013c217be4fccefc4e4f194026fa04ab4ca" }
test-utils = { git = "https://github.com/rust-lang/rust-analyzer", rev = "b8458013c217be4fccefc4e4f194026fa04ab4ca" }

rg_syntax = { path = "crates/vendor/syntax" }
rg_tt = { path = "crates/vendor/tt" }
rg_cfg_eval = { path = "crates/engine/cfg-eval" }
rg_macro_expand = { path = "crates/vendor/macro-expand" }

rg_lsp_server = { path = "crates/lsp/server" }
rg_lsp_proto = { path = "crates/lsp/proto" }
rg_lsp_engine = { path = "crates/lsp/engine" }
rg_workspace = { path = "crates/engine/workspace" }
rg_parse = { path = "crates/engine/parse" }
rg_item_tree = { path = "crates/engine/item-tree" }
rg_ir_model = { path = "crates/engine/ir-model" }
rg_ir_storage = { path = "crates/engine/ir-storage" }
rg_ir_view = { path = "crates/engine/ir-view" }
rg_def_map = { path = "crates/engine/def-map" }
rg_semantic_ir = { path = "crates/engine/semantic-ir" }
rg_ty = { path = "crates/engine/ty" }
rg_body_ir = { path = "crates/engine/body-ir" }
rg_analysis = { path = "crates/engine/analysis" }
rg_project = { path = "crates/engine/project" }
rg_package_store = { path = "crates/engine/package-store" }
rg_text = { path = "crates/lib/text" }
rg_arena = { path = "crates/lib/arena" }
rg_profile = { path = "crates/lib/profile" }
rg_std = { path = "crates/lib/std" }
rg_std_derive = { path = "crates/lib/std-derive" }
rg_wincode_utils = { path = "crates/lib/wincode-utils" }
test_fixture = { path = "crates/lib/test-fixture" }

[profile.bench]
debug = true
