[package]
name = "rg_lsp_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
rg_lsp_engine.workspace = true
rg_project.workspace = true
rg_workspace.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "process", "rt-multi-thread", "sync"] }
tower-lsp-server.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
