[package]
name = "rust-glancer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = ["jemalloc-stats"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-sys"]
jemalloc-stats = [
  "jemalloc",
  "tikv-jemallocator/stats",
  "tikv-jemalloc-sys/stats",
]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
rg_std.workspace = true
rg_project.workspace = true
rg_workspace.workspace = true
rg_lsp_engine.workspace = true
rg_lsp_server.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-sys = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gungraun.workspace = true

[[bench]]
name = "ci_analyze"
harness = false
