[package]
name = "rg_body_ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["display"] }
ra_syntax.workspace = true
rayon.workspace = true
rkyv.workspace = true
rg_arena = { workspace = true, features = ["memsize"] }
rg_memsize.workspace = true
rg_package_store.workspace = true
rg_def_map.workspace = true
rg_item_tree.workspace = true
rg_parse.workspace = true
rg_semantic_ir.workspace = true
rg_text = { workspace = true, features = ["memsize"] }

[dev-dependencies]
expect-test.workspace = true
rg_workspace.workspace = true
test_fixture.workspace = true
