[package]
name = "rg_def_map"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
rg_arena.workspace = true
rg_cfg_eval.workspace = true
rg_macro_runtime.workspace = true
rg_profile.workspace = true
rg_std.workspace = true
rg_package_store.workspace = true
rg_item_tree.workspace = true
rg_ir_model.workspace = true
rg_ir_storage.workspace = true
rg_parse.workspace = true
rg_syntax.workspace = true
rg_text.workspace = true
rg_tt.workspace = true
rg_workspace.workspace = true
test_fixture.workspace = true

[dev-dependencies]
expect-test.workspace = true
