[package]
name = "rg_ir_model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "from"] }
wincode.workspace = true
rg_arena.workspace = true
rg_cfg_eval.workspace = true
rg_std.workspace = true
rg_parse.workspace = true
rg_workspace.workspace = true
rg_text.workspace = true
rg_tt.workspace = true
rg_wincode_utils.workspace = true
