[package]
name = "rg_ir_storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
wincode.workspace = true
rg_arena = { workspace = true, features = ["memsize"] }
rg_memsize.workspace = true
rg_ir_model.workspace = true
rg_parse.workspace = true
rg_text = { workspace = true, features = ["memsize"] }
rg_tt.workspace = true
rg_workspace.workspace = true
