[package]
name = "rg_ir_view"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Indexed IR view facade for rust-glancer."

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["display"] }
rg_body_ir.workspace = true
rg_def_map.workspace = true
rg_ir_model.workspace = true
rg_ir_storage.workspace = true
rg_item_tree.workspace = true
rg_package_store.workspace = true
rg_parse.workspace = true
rg_semantic_ir.workspace = true
rg_ty.workspace = true
