[package]
name = "rg_item_tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["display"] }
rg_syntax.workspace = true
rayon.workspace = true
wincode.workspace = true
rg_arena = { workspace = true, features = ["memsize"] }
rg_cfg_eval.workspace = true
rg_ir_model.workspace = true
rg_macro_expand.workspace = true
rg_memsize.workspace = true
rg_parse.workspace = true
rg_text = { workspace = true, features = ["memsize"] }
rg_tt.workspace = true
rg_wincode_utils.workspace = true
rg_workspace.workspace = true
test_fixture.workspace = true

[dev-dependencies]
expect-test.workspace = true
