[package]
name = "rg_package_store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rg_memsize.workspace = true
rg_workspace.workspace = true
thiserror.workspace = true
