[package]
name = "rg_parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
ra_syntax.workspace = true
rkyv.workspace = true
rg_arena = { workspace = true, features = ["memsize"] }
rg_memsize = { workspace = true, features = ["ra_syntax"] }
rg_workspace.workspace = true

[dev-dependencies]
expect-test.workspace = true
test_fixture.workspace = true
