[package]
name = "rg_parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
rg_cfg_eval.workspace = true
rg_syntax.workspace = true
wincode.workspace = true
rg_arena.workspace = true
rg_std.workspace = true
rg_workspace.workspace = true

[dev-dependencies]
expect-test.workspace = true
test_fixture.workspace = true
