[package]
name = "rg_semantic_ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["from"] }
wincode.workspace = true
rg_arena = { workspace = true, features = ["memsize"] }
rg_std.workspace = true
rg_package_store.workspace = true
rg_def_map.workspace = true
rg_ir_model.workspace = true
rg_ir_storage.workspace = true
rg_item_tree.workspace = true
rg_parse.workspace = true
rg_text = { workspace = true, features = ["memsize"] }
rg_ty.workspace = true

[dev-dependencies]
expect-test.workspace = true
rg_workspace.workspace = true
