[package]
name = "rg_syntax"
version = "0.0.0"
description = "Concrete syntax tree definitions for rust-analyzer."

authors = ["rust-analyzer developers"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-analyzer"
rust-version = "1.87"

[lib]
doctest = false

[dependencies]
either.workspace = true
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
rustc-literal-escaper.workspace = true
smol_str.workspace = true
triomphe = { workspace = true, features = ["std"] }
tracing.workspace = true
smallvec = { workspace = true, features = [
    "const_new",
    "union",
    "const_generics",
] }

parser.workspace = true
stdx.workspace = true

[dev-dependencies]
rayon.workspace = true
expect-test.workspace = true
rustc_apfloat.workspace = true

test-utils.workspace = true

[features]
default = []
in-rust-tree = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_salsa_async_drops)'] }
