[package]
name = "rg_syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = [
  "rust-analyzer developers",
  "Igor Aleksanov <popzxc@yandex.ru>",
]
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Concrete syntax tree definitions for rust-analyzer."

[lib]
doctest = false

[dependencies]
either.workspace = true
itertools.workspace = true
rustc-hash.workspace = true
rustc-literal-escaper.workspace = true
smol_str.workspace = true
text-size.workspace = true
tracing.workspace = true
smallvec = { workspace = true, features = [
    "const_new",
    "union",
    "const_generics",
] }

parser.workspace = true
stdx.workspace = true

[dev-dependencies]
rayon.workspace = true
expect-test.workspace = true
rustc_apfloat.workspace = true

test-utils.workspace = true

[features]
default = []
in-rust-tree = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_salsa_async_drops)'] }
