[package]
name = "rg_memsize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = []
ls_types = ["dep:ls_types"]
ra_syntax = ["dep:ra_syntax"]

[dependencies]
ls_types = { workspace = true, optional = true }
ra_syntax = { workspace = true, optional = true }
