[package]
name = "rg_memsize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = []
ls_types = ["dep:ls_types"]
rg_syntax = ["dep:rg_syntax"]

[dependencies]
ls_types = { workspace = true, optional = true }
rg_syntax = { workspace = true, optional = true }
