[package]
name = "rg_memsize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = ["derive"]
derive = ["dep:rg_memsize_derive"]
ls_types = ["dep:ls_types"]

[dependencies]
ls_types = { workspace = true, optional = true }
rg_memsize_derive = { workspace = true, optional = true }

[[test]]
name = "derive"
path = "tests/derive/mod.rs"
