[package]
name = "rg_rowan"
version = "0.15.18"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/rust-analyzer/rowan"
license = "MIT OR Apache-2.0"
description = "Library for generic lossless syntax trees"
edition = "2021"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[dependencies]
text-size.workspace = true
bumpalo.workspace = true

serde = { workspace = true, optional = true }

[dev-dependencies]
m_lexer.workspace = true

[features]
serde1 = ["serde", "text-size/serde"]
