[package]
name = "rg_std"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
ls_types.workspace = true
rg_std_derive.workspace = true
wincode.workspace = true

[[test]]
name = "derive"
path = "tests/derive/mod.rs"
