[package]
name = "rg_text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = []
memsize = ["dep:rg_memsize"]

[dependencies]
rkyv.workspace = true
rg_memsize = { workspace = true, optional = true }
