[package]
name = "rg_text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = []
memsize = ["dep:rg_std"]

[dependencies]
wincode.workspace = true
rg_std = { workspace = true, optional = true }
