[package]
name = "rg_lsp_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
derive_more = { workspace = true, features = ["debug", "display"] }
dissimilar.workspace = true
futures.workspace = true
ls_types.workspace = true
rg_analysis.workspace = true
rg_def_map.workspace = true
rg_ir_model.workspace = true
rg_lsp_proto.workspace = true
rg_parse.workspace = true
rg_project.workspace = true
rg_std.workspace = true
rg_workspace.workspace = true
tarpc = { workspace = true, features = ["serde-transport", "serde-transport-json", "tcp", "tokio1"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
expect-test.workspace = true
test_fixture.workspace = true
